feat: Add current configured Solari source-resolution and snapshot mode
